JUSST CHECKED IF IT WORKS WITH ME
HELLO WORLD

--- a/templates/store/index.html
+++ b/templates/store/index.html
@@ -42,7 +42,7 @@
           {% endif %}
           </div>
         </section>
-
+        <h1> HellO TEAM</h1>
 
         <!-- TRENDING PRODUCTS-->
         <section class="py-5">
